--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+dataRetrieval 1.4.0
+===========
+* Changed naming convention:
+getDVData -> getNWISDaily
+getSampleData -> getNWISSample
+getSTORETData* -> getWQPSample
+getSampleDataFromFile -> getUserSample
+getDailyDataFromFile -> getUserDaily
+getMetaData -> splits into getNWISInfo and getUserInfo
+getSiteFileData <- getNWISSiteInfo
+getParameterInfo <- getNWISPcodeInfo
+getDataAvailability <- getNWISDataAvailability
+* Changed WaterML2 rbind fill from plyr function to dplyr. Removed plyr import, added dplyr.
+*
+
+
 dataRetrieval 1.3.3
 ===========
 
